<?xml version="1.0" encoding="utf-8"?>
<com.swipememo.swipememo.customviews.EventFrame
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/innerMemoRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gestureColor="@color/memoKeyColorLight"
    tools:showIn="@layout/window_memo">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/innerMemo_horizontal_margin"
        android:paddingBottom="@dimen/innerMemo_horizontal_margin"
        android:paddingRight="@dimen/innerMemo_vertical_margin"
        android:paddingLeft="@dimen/innerMemo_vertical_margin">
        <LinearLayout
            android:id="@+id/innerMemo_titleBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ToggleButton
                android:id="@+id/innerMemo_titleBar_importance"
                android:layout_width="@dimen/innerMemo_star_width_height"
                android:layout_height="@dimen/innerMemo_star_width_height"
                android:background="@drawable/im_tbtn_importance"
                android:textOff=""
                android:textOn=""/>

            <EditText
                android:id="@+id/innerMemo_titleBar_title"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/memoItem_titleBar_height"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textAppearance="@style/TextAppearance_title"
                android:hint="@string/TitleHint"/>
            </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/innerMemo_title_body_margin">

            <EditText
                android:id="@+id/innerMemo_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance_body"
                android:ems="10"
                android:inputType="textMultiLine"
                android:hint="@string/ContentHint" />
        </ScrollView>
        <LinearLayout
            android:id="@+id/innerMemo_menuBar"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:orientation="horizontal"
            android:background="@color/memoKeyColor"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:visibility="gone">

            <Button
                android:id="@+id/innerMemo_menuBar_copy"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/CopyAll"
                android:textColor="@color/memoKeyColorLight"/>
            <Button
                android:id="@+id/innerMemo_menuBar_paste"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/Paste"
                android:textColor="@color/memoKeyColorLight"/>
            <Button
                android:id="@+id/innerMemo_menuBar_clear"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/ClearAll"
                android:textColor="@color/memoKeyColorLight"/>
        </LinearLayout>
    </LinearLayout>
</com.swipememo.swipememo.customviews.EventFrame>